deployments/k8s/auth-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: auth
  template:
    metadata:
      labels:
        component: auth
    spec:
      containers:
        - name: auth
          image: 690303654955.dkr.ecr.us-west-2.amazonaws.com/dakhipp/auth:latest
          ports:
            - containerPort: 8001
      imagePullSecrets:
        - name: "us-west-2-ecr-registry"
