deployments/k8s/graphql-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graphql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: graphql
  template:
    metadata:
      labels:
        component: graphql
    spec:
      containers:
        - name: server
          image: 690303654955.dkr.ecr.us-west-2.amazonaws.com/dakhipp/graphql:latest
          ports:
            - containerPort: 8000
      imagePullSecrets:
        - name: "us-west-2-ecr-registry"
