deployments/k8s/kafka-stateful-set.yml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: kafka-stateful-set
spec:
  serviceName: kafka-cluster-ip-service
  replicas: 1
  selector:
    matchLabels:
      component: kafka
  template:
    metadata:
      labels:
        component: kafka
    spec:
      # initContainers:
      #   - name: volume-permissions
      #     image: busybox
      #     command: ["sh", "-c", "chmod -R g+rwX /bitnami"]
      #     volumeMounts:
      #       - mountPath: /bitnami
      #         name: kafka-storage
      # terminationGracePeriodSeconds: 10
      volumes:
        - name: kafka-storage
          persistentVolumeClaim:
            claimName: kafka-persistent-volume-claim
      containers:
        - name: kafka
          image: bitnami/kafka:latest
          ports:
            - containerPort: 9092
          volumeMounts:
            - name: kafka-storage
              mountPath: /bitnami/kafka
              subPath: kafka
