deployments/k8s/text-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: text-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: text
  template:
    metadata:
      labels:
        component: text
    spec:
      containers:
        - name: text
          image: 690303654955.dkr.ecr.us-west-2.amazonaws.com/dakhipp/text:latest
      imagePullSecrets:
        - name: "us-west-2-ecr-registry"
