deployments/k8s/auth-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: auth
  ports:
    - port: 8001
      targetPort: 8001
