deployments/k8s/graphql-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: graphql-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: graphql
  ports:
    - port: 8000
      targetPort: 8000
