deployments/k8s/kafka-cluster-ip-service.yml
# apiVersion: v1
# kind: Service
# metadata:
#   name: kafka-cluster-ip-service
# spec:
#   type: ClusterIP
#   selector:
#     component: kafka
#   ports:
#     - port: 9092
#       targetPort: 9092
# status:
#   loadBalancer: {}

apiVersion: v1
kind: Service
metadata:
  name: kafka-cluster-ip-service
spec:
  clusterIP: None
  ports:
    - name: "9092"
      port: 9092
      targetPort: 9092
  selector:
    component: kafka
status:
  loadBalancer: {}
