deployments/k8s/zookeeper-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: zookeeper
  ports:
    - name: "2181"
      port: 2181
      targetPort: 2181
status:
  loadBalancer: {}
